media tag compelted, fixing spacing tomorrow

--- a/src/About.scss
+++ b/src/About.scss
@@ -88,3 +88,9 @@
     padding: 8rem 2rem 8rem 2rem;
   }
 }
+
+.container3 {
+  display: flex;
+  padding: 0;
+  overflow-y: hidden;
+}
